# CGI

./: 12  CMakeLists.txt  README.md  hello  hello.file  main.c
Html/: index.html
Html/css/: color.css
Html/js/: jquery-1.7.2.min.js
Html/mini_httpd-1.30/: mini_httpd.c  version.h
RPC/: client  client.c  data.h  data.x  data_clnt.c  data_svc.c  server  server.c  standtime.c
micro_httpd/: micro_httpd.c
src/JS/: hello.js
src/init/: CMakeLists.txt  init.c  init.h
src/module/: CMakeLists.txt
src/module/Error/: error.c
src/module/FManager/: fmanager.c  fmanager.h
src/module/Handler/: handle.c
src/module/Log/: log.c  log.h
src/module/Pro/: api.c  api.h  jsonrpc-c.c  jsonrpc-c.h
src/module/SData/: cJSON.c  cJSON.h  list.h  sdata.c  sdata.h
src/module/SocketDao/: html_lib.c  html_lib.h  socketdao.c  socketdao.h
src/module/TaskManager/: taskmanger.c  taskmanger.h
src/web/: func.js  index.html
src/web/js/: utility.js
src/web/style/: normal_ws.css
